// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File renders 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  padding: 0.4rem;
  padding-left: calc(1rem - 2px);
  padding-right: 3rem;
  color: rgba(255,255,255,0.5);
  text-decoration: none;
  font-weight: 400;
  min-width: 100px;
  border-left: 2px solid transparent;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 function (styleProps) {
  return: styleProps.noTransition || 'transition: 0.3s ease all;';
}

.c0:hover {
  background-color: rgba(108,174,221,0.09999999999999998);
  color: rgb(227,230,232);
  border-color: rgb(38,110,161);
}

.c0:hover > div {
  opacity: 1 !important;
}

.c2 {
  background-image: url(test-file-stub);
  background-size: 1rem;
  background-position: 0;
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  display: inline-block;
  -webkit-font-smoothing: antialiased;
  vertical-align: top;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: inline-block;
  margin-left: 0.5rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  vertical-align: middle;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: rem;
}

<div>
  <span
    className="c0"
    onClick={[Function]}
    type="module"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "verticalAlign": "middle",
          }
        }
      >
        <span
          className="c2"
          type="module"
        />
      </div>
      <span
        className="c3"
        title="Test"
      >
        Test
      </span>
    </div>
  </span>
</div>
`;

exports[`File renders alternative 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  padding: 0.4rem;
  padding-left: calc(1rem - 2px);
  padding-right: 3rem;
  color: rgba(255,255,255,0.5);
  text-decoration: none;
  font-weight: 400;
  min-width: 100px;
  border-left: 2px solid transparent;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 function (styleProps) {
  return: styleProps.noTransition || 'transition: 0.3s ease all;';
}

.c0:hover {
  background-color: rgba(255,211,153,0.09999999999999998);
  color: rgb(227,230,232);
  border-color: rgb(245,139,0);
}

.c0:hover > div {
  opacity: 1 !important;
}

.c2 {
  background-image: url(test-file-stub);
  background-size: 1rem;
  background-position: 0;
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  display: inline-block;
  -webkit-font-smoothing: antialiased;
  vertical-align: top;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: inline-block;
  margin-left: 0.5rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  vertical-align: middle;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: rem;
}

<div>
  <span
    className="c0"
    onClick={[Function]}
    type="directory"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "verticalAlign": "middle",
          }
        }
      >
        <span
          className="c2"
          type="directory"
        />
      </div>
      <span
        className="c3"
        title="Test"
      >
        Test
      </span>
    </div>
  </span>
</div>
`;

exports[`File renders as active 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  padding: 0.4rem;
  padding-left: calc(1rem - 2px);
  padding-right: 3rem;
  color: rgba(255,255,255,0.5);
  text-decoration: none;
  font-weight: 400;
  min-width: 100px;
  border-left: 2px solid transparent;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #E0E0E0 !important;
  border-color: #6CAEDD !important;
  background-color: rgba(139,191,228,0.19999999999999996) !important;
}

.c0 function (styleProps) {
  return: styleProps.noTransition || 'transition: 0.3s ease all;';
}

.c0:hover > div {
  opacity: 1 !important;
}

.c2 {
  background-image: url(test-file-stub);
  background-size: 1rem;
  background-position: 0;
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  display: inline-block;
  -webkit-font-smoothing: antialiased;
  vertical-align: top;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: inline-block;
  margin-left: 0.5rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  vertical-align: middle;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: rem;
}

<div>
  <span
    className="c0"
    onClick={[Function]}
    type="module"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "verticalAlign": "middle",
          }
        }
      >
        <span
          className="c2"
          type="module"
        />
      </div>
      <span
        className="c3"
        title="Test"
      >
        Test
      </span>
    </div>
  </span>
</div>
`;

exports[`File renders directory 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  padding: 0.4rem;
  padding-left: calc(1rem - 2px);
  padding-right: 3rem;
  color: rgba(255,255,255,0.5);
  text-decoration: none;
  font-weight: 400;
  min-width: 100px;
  border-left: 2px solid transparent;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 function (styleProps) {
  return: styleProps.noTransition || 'transition: 0.3s ease all;';
}

.c0:hover {
  background-color: rgba(108,174,221,0.09999999999999998);
  color: rgb(227,230,232);
  border-color: rgb(38,110,161);
}

.c0:hover > div {
  opacity: 1 !important;
}

.c2 {
  background-image: url(test-file-stub);
  background-size: 1rem;
  background-position: 0;
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  display: inline-block;
  -webkit-font-smoothing: antialiased;
  vertical-align: top;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 {
  display: inline-block;
  margin-left: 0.5rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  vertical-align: middle;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: rem;
}

<div>
  <span
    className="c0"
    onClick={[Function]}
    type="directory"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "display": "inline-block",
            "verticalAlign": "middle",
          }
        }
      >
        <span
          className="c2"
          type="directory"
        />
      </div>
      <span
        className="c3"
        title="Test"
      >
        Test
      </span>
    </div>
  </span>
</div>
`;
